<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login"
    tools:context="com.projects.ingilizcekelimecalis.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:weightSum="12">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="top"
            android:orientation="vertical">

            <com.google.android.gms.ads.AdView
                android:id="@+id/anasayfaust"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                ads:adSize="@string/reklamtipi"
                ads:adUnitId="@string/anasayfaust" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="center"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/kelimecalis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btnbul"
                        android:text="@string/kelimecalis"
                        android:textColor="@color/white" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@color/bg_login"
                        android:clickable="false" />

                    <Button
                        android:id="@+id/kelimetesti"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btnbul"
                        android:text="@string/kelimetesti"
                        android:textColor="@color/white" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@color/bg_login"
                        android:clickable="false" />

                    <Button
                        android:id="@+id/kelimelerim"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btnbul"
                        android:text="@string/kelimelerim"
                        android:textColor="@color/white" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@color/bg_login"
                        android:clickable="false" />

                    <Button
                        android:id="@+id/ayarlar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btnbul"
                        android:text="@string/ayarlar"
                        android:textColor="@color/white" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <com.google.android.gms.ads.AdView
                android:id="@+id/anasayfaalt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                ads:adSize="@string/reklamtipi"
                ads:adUnitId="@string/anasayfaalt" />
        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>

