<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login"
    tools:context="com.projects.ingilizcekelimecalis.KelimeCalis">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:weightSum="12">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="top"
            android:orientation="vertical">

            <com.google.android.gms.ads.AdView
                android:id="@+id/kelimecalisust"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                ads:adSize="@string/reklamtipi"
                ads:adUnitId="@string/kelimecalisreklamust" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="center"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:orientation="vertical">

                            <Button
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/btnline"
                                android:text="@string/ingilizce"
                                android:textColor="@color/white" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="7"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:src="@drawable/degis" />

                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:orientation="vertical">

                            <Button
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/btnline"
                                android:text="@string/turkce"
                                android:textColor="@color/white" />

                        </LinearLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="20dp"
                        android:background="@android:color/white" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/btningilizce"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/btnline"
                                android:text="@string/ingilizce"
                                android:textColor="@color/white" />

                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="20"
                            android:orientation="vertical"
                            android:paddingLeft="10dp">

                            <ImageView
                                android:id="@+id/btndinleing"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@drawable/btnline"
                                android:gravity="center"
                                android:src="@drawable/dinle" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/btnturkce"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/btnline"
                                android:text="@string/turkce"
                                android:textColor="@color/white" />

                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="20"
                            android:orientation="vertical"
                            android:paddingLeft="10dp">

                            <ImageView
                                android:id="@+id/btnpaylas"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@drawable/btnline"
                                android:gravity="center"
                                android:src="@drawable/paylas" />

                        </LinearLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="20dp"
                        android:background="@android:color/white" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/kelimelerimeekle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/btnyeni"
                                android:text="@string/kelimelereekle"
                                android:textColor="@color/white" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="5"
                            android:orientation="vertical"
                            android:padding="4dp">

                            <ImageView
                                android:id="@+id/btnkopyala"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:src="@drawable/kopyala" />

                        </LinearLayout>


                    </LinearLayout>

                    <Button
                        android:id="@+id/kelimegetir"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/btnbul"
                        android:text="@string/yenikelimegetir"
                        android:textColor="@color/white" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <com.google.android.gms.ads.AdView
                android:id="@+id/kelimecalisalt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                ads:adSize="@string/reklamtipi"
                ads:adUnitId="@string/kelimecalisreklamalt" />
        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>